switch to SpaceHosting.IndexShard
