# docs/swagger/swagger.json
@@ -59,26 +59,17 @@
             "content": {
               "text/plain": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/SearchResultDto"
-                  }
+                  "$ref": "#/components/schemas/SearchResultDto"
                 }
               },
               "application/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/SearchResultDto"
-                  }
+                  "$ref": "#/components/schemas/SearchResultDto"
                 }
               },
               "text/json": {
                 "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/SearchResultDto"
-                  }
+                  "$ref": "#/components/schemas/SearchResultDto"
                 }
               }
             }
@@ -118,10 +109,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "type": "array",
-                    "items": {
-                      "$ref": "#/components/schemas/SearchResultDto"
-                    }
+                    "$ref": "#/components/schemas/SearchResultDto"
                   }
                 }
               },
@@ -129,10 +117,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "type": "array",
-                    "items": {
-                      "$ref": "#/components/schemas/SearchResultDto"
-                    }
+                    "$ref": "#/components/schemas/SearchResultDto"
                   }
                 }
               },
@@ -140,10 +125,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "type": "array",
-                    "items": {
-                      "$ref": "#/components/schemas/SearchResultDto"
-                    }
+                    "$ref": "#/components/schemas/SearchResultDto"
                   }
                 }
               }
@@ -182,10 +164,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "type": "array",
-                    "items": {
-                      "$ref": "#/components/schemas/SearchResultDto"
-                    }
+                    "$ref": "#/components/schemas/SearchResultDto"
                   }
                 }
               },
@@ -193,10 +172,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "type": "array",
-                    "items": {
-                      "$ref": "#/components/schemas/SearchResultDto"
-                    }
+                    "$ref": "#/components/schemas/SearchResultDto"
                   }
                 }
               },
@@ -204,10 +180,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "type": "array",
-                    "items": {
-                      "$ref": "#/components/schemas/SearchResultDto"
-                    }
+                    "$ref": "#/components/schemas/SearchResultDto"
                   }
                 }
               }
@@ -219,6 +192,47 @@
   },
   "components": {
     "schemas": {
+      "AttributeDto": {
+        "type": "object",
+        "properties": {
+          "key": {
+            "type": "string"
+          },
+          "value": {
+            "$ref": "#/components/schemas/AttributeValue"
+          }
+        },
+        "additionalProperties": false
+      },
+      "AttributeValue": {
+        "type": "object",
+        "properties": {
+          "string": {
+            "type": "string",
+            "nullable": true
+          },
+          "guid": {
+            "type": "string",
+            "format": "uuid",
+            "nullable": true
+          },
+          "bool": {
+            "type": "boolean",
+            "nullable": true
+          },
+          "int64": {
+            "type": "integer",
+            "format": "int64",
+            "nullable": true
+          },
+          "dateTime": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          }
+        },
+        "additionalProperties": false
+      },
       "DenseVectorDto": {
         "type": "object",
         "allOf": [
@@ -226,6 +240,32 @@
             "$ref": "#/components/schemas/VectorDto"
           }
         ],
+        "additionalProperties": false
+      },
+      "FoundDataPointDto": {
+        "type": "object",
+        "properties": {
+          "vector": {
+            "oneOf": [
+              {
+                "$ref": "#/components/schemas/DenseVectorDto"
+              },
+              {
+                "$ref": "#/components/schemas/SparseVectorDto"
+              }
+            ]
+          },
+          "attributes": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/AttributeDto"
+            }
+          },
+          "distance": {
+            "type": "number",
+            "format": "double"
+          }
+        },
         "additionalProperties": false
       },
       "IndexInfoDto": {
@@ -241,9 +281,9 @@
             "type": "integer",
             "format": "int32"
           },
-          "vectorCount": {
+          "dataPointsCount": {
             "type": "integer",
-            "format": "int32"
+            "format": "int64"
           }
         },
         "additionalProperties": false
@@ -251,11 +291,14 @@
       "SearchQueryDto": {
         "type": "object",
         "properties": {
-          "k": {
-            "type": "integer",
-            "format": "int32"
+          "splitFilter": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/AttributeDto"
+            },
+            "nullable": true
           },
-          "vectors": {
+          "queryVectors": {
             "type": "array",
             "items": {
               "oneOf": [
@@ -267,6 +310,10 @@
                 }
               ]
             }
+          },
+          "k": {
+            "type": "integer",
+            "format": "int32"
           }
         },
         "additionalProperties": false
@@ -274,11 +321,7 @@
       "SearchResultDto": {
         "type": "object",
         "properties": {
-          "distance": {
-            "type": "number",
-            "format": "double"
-          },
-          "vector": {
+          "queryVector": {
             "oneOf": [
               {
                 "$ref": "#/components/schemas/DenseVectorDto"
@@ -288,8 +331,11 @@
               }
             ]
           },
-          "data": {
-            "nullable": true
+          "nearestDataPoints": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/FoundDataPointDto"
+            }
           }
         },
         "additionalProperties": false
@@ -317,10 +363,6 @@
         "properties": {
           "isSparse": {
             "type": "boolean"
-          },
-          "dimension": {
-            "type": "integer",
-            "format": "int32"
           },
           "coordinates": {
             "type": "array",
