# src/SpaceHosting.Contracts/ApiModels/IndexInfoDto.cs
@@ -1,0 +1,4 @@
+namespace SpaceHosting.Contracts.ApiModels
+{
+    public record IndexInfoDto(string IndexAlgorithm, string VectorType, int VectorDimension, long DataPointsCount);
+}
