# src/SpaceHosting.Contracts/ApiModels/SearchResultDto.cs
@@ -1,4 +1,4 @@
 namespace SpaceHosting.Contracts.ApiModels
 {
-    public record SearchResultDto(VectorDto QueryVector, FoundDataPointDto[] NearestKDataPoints);
+    public record SearchResultDto(VectorDto QueryVector, FoundDataPointDto[] NearestDataPoints);
 }
